crates/omaghy-tui/src/surfaces/snapshots/omaghy_tui__surfaces__pull_requests__tests__pr_list_state_matrix_ascii.snap
---
source: crates/omaghy-tui/src/surfaces/pull_requests.rs
expression: "state_matrix(Icons::ASCII, None, 8).await"
---
── cold · Pull requests · is:open review-requested:@me ──
  -------------------------------------------------------------------
  ----------------------------------------------
  ------------------------------------------------------------------------------
  -------------------------------------------------------
  -------------------------------------------------------------
  -------------------------------------------------------------------
  | Loading


── populated · Pull requests  3 · is:open review-requested:@me ──
>  o Short one                                      ~/an-equally-long-r~     #7 o open   ~    1   1m
 * o Add SocketServer reconnect backoff and idle t~ ~/quickshell             #1 o open   !  2/4   4m
 * o Allow the bar's workspace indicator to be con~ basecamp/omarchy      #2305 o open   ~    2  40m




 > #7 - you requested changes - some-very-long-organization-name/an-equally-long-repository-name - ~

── empty · Pull requests  0 · is:open review-requested:@me ──

                                         =  No pull requests

                         Nothing matches is:pr is:open review-requested:@me.

                                           r  check again



── stale · Pull requests  3 · is:open review-requested:@me ──
>  o Short one                                      ~/an-equally-long-r~     #7 o open   ~    1   1m
 * o Add SocketServer reconnect backoff and idle t~ ~/quickshell             #1 o open   !  2/4   4m
 * o Allow the bar's workspace indicator to be con~ basecamp/omarchy      #2305 o open   ~    2  40m




 > #7 - you requested changes - some-very-long-organization-name/an-equally-long-repository-name - ~

── refreshing · Pull requests  3 · is:open review-requested:@me ──
>  o Short one                                      ~/an-equally-long-r~     #7 o open   ~    1   1m
 * o Add SocketServer reconnect backoff and idle t~ ~/quickshell             #1 o open   !  2/4   4m
 * o Allow the bar's workspace indicator to be con~ basecamp/omarchy      #2305 o open   ~    2  40m




 > #7 - you requested changes - some-very-long-organization-name/an-equally-long-repository-name - ~

── offline-with-cache · Pull requests  3 · is:open review-requested:@me ──
 0 Offline - showing cached data.
>  o Short one                                      ~/an-equally-long-r~     #7 o open   ~    1   1m
 * o Add SocketServer reconnect backoff and idle t~ ~/quickshell             #1 o open   !  2/4   4m
 * o Allow the bar's workspace indicator to be con~ basecamp/omarchy      #2305 o open   ~    2  40m



 > #7 - you requested changes - some-very-long-organization-name/an-equally-long-repository-name - ~

── offline-without-cache · Pull requests · is:open review-requested:@me ──

                                   0  Offline, and nothing cached

                   GitHub is unreachable and this surface has never been fetched.

                                            r  try again



── rate-limited · Pull requests · is:open review-requested:@me ──

                                    T  GitHub rate limit reached

                         Resets at 12:00 UTC. Cached data is still readable.

                                            r  try again



── forbidden · Pull requests · is:open review-requested:@me ──


                                            /  No access

                       You do not have access to this. It will not be retried.




── error · Pull requests · is:open review-requested:@me ──

                                         X  Something failed

                                  GitHub returned 502: bad gateway

                                            r  try again
